--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <title>Book Nook</title>
 
     <!-- CSS stylesheets -->
-    <link rel="stylesheet" href="/assets/material-icons.css" >
-    <link rel="stylesheet" href="/main-collageTheme.css" />
-    <link rel="stylesheet" href="/entry(shared-layout).css" />
-    <link rel="stylesheet" href="/entry(viewpage-layout).css" />
-    <link rel="stylesheet" href="/entry(otherpage-layout).css" />
+    <link rel="stylesheet" href="../src/styles/assets/material-icons.css" >
+    <link rel="stylesheet" href="../src/styles/main-collageTheme.css" />
+    <link rel="stylesheet" href="../src/styles/entry(shared-layout).css" />
+    <link rel="stylesheet" href="../src/styles/entry(viewpage-layout).css" />
+    <link rel="stylesheet" href="../src/styles/entry(otherpage-layout).css" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,6 +20,6 @@
 
   <body>
     <div id="root"></div>
-    <script src="../src/index.js"></script>
+    <script src="../src/index.js" type="text/jsx"></script>
   </body>
 </html>
