--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
   <body>
     <div id="root"></div>
     <script src="../src/index.js" type="text/jsx"></script>
+    <script src="../src/main.js"></script>
   </body>
 </html>
