--- a/index.html
+++ b/index.html
@@ -5,22 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book Nook</title>
 
-    <!-- CSS stylesheets -->
-    <link rel="stylesheet" href="../src/styles/assets/material-icons.css" >
-    <link rel="stylesheet" href="../src/styles/main-collageTheme.css" />
-    <link rel="stylesheet" href="../src/styles/entry(shared-layout).css" />
-    <link rel="stylesheet" href="../src/styles/entry(viewpage-layout).css" />
-    <link rel="stylesheet" href="../src/styles/entry(otherpage-layout).css" />
-
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Rock+Salt&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-   </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Rock+Salt&family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
   <body>
     <div id="root"></div>
-    <script src="../src/index.js" type="text/jsx"></script>
-    <script src="../src/main.js"></script>
+    <script src="./src/main.jsx" type="module"></script>
   </body>
 </html>
